@@ -1,4 +1,5 @@
 
+  * Added Ultimate-guitar.com as lyrics source for guitar tabs
   * If the track length is not correctly read by taglib read at play time using gstreamer
   * Added Events to last.fm information panel
   * Implemented PlayList import from m3u, pls, axs, xspf playlist file formats
